--- a/css/index.css
+++ b/css/index.css
@@ -1231,7 +1231,7 @@ div#upper_section div.divider {
 }
 #inner_wrap {
 	display: flex;
-	justify-content: space-between;
+/*	justify-content: space-between; */
 	align-items: center;
 	border-bottom: 1px solid #bbb;
 	margin-bottom: 6px;
@@ -4260,4 +4260,17 @@ img.theme_thumbnail {
 
 #lang_main_files_list .name, #member_list .email, #approve_list .email {
 	word-break: break-word;
+}
+
+div.bottom_quicklinks {
+    margin-top: 1.5em;
+    padding-top: 0.5em;
+    border-top: 1px solid #666;
+}
+
+a.bottombuttons {
+    float: left;
+    margin-right: 1.5em;
+    font-size: 0.8em;
+    font-family: Arial, Helvetica, sans-serif;
 }
